#BIB001-112 Fixed none scrollbar

--- a/content/css/startMenu.css
+++ b/content/css/startMenu.css
@@ -426,7 +426,7 @@ body::-webkit-scrollbar {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    overflow-y: hidden;
+    overflow-y: auto;
 }
 
 #text-kat #unter-kat .subCatNavEntry {
